test_regress/t/t_class_mod_bad.out
%Error: t/t_class_mod_bad.v:21:7: Package/class for ':: reference' not found: 'M'
   21 |       M::Cls p;
      |       ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_class_mod_bad.v:21:7: Package/class for 'class/package reference' not found: 'M'
   21 |       M::Cls p;
      |       ^
%Error: Exiting due to
